# frequent-sae-features

./: PCA.py  README.md  basic_loading_and_analysing.ipynb  pc-analysis.ipynb  pc-analysis.py  pyproject.toml  requirements.txt  run_prodlda.py  save_load_pyro_model.py  save_sae_activations.py
notebooks/: explore_model.ipynb  save_sae_activations.ipynb
scripts/: PCA.py  launch_prodlda.py  load_newsgroups_docs.py  pc-analysis.py  prodlda.py  run_and_upload.sh
src/sae_topics/: prodlda.py  test.py
